jpress v4.0.9:
新增：文章编辑新增上传视频的功能
新增：新增 html2wxml 的 api 及其文档
优化：更新文章、产品、页面的 api 以及文档
优化：完善产品、购物车、优惠券的相关 API
修复：文章编辑器 标题 和 加粗无效的问题
修复：在 JPress 导入 eclipse 后，在某些情况下得到的资源路径错误的问题
修复：Menu.isUrlEquals 在二级目录下可能判断不正确的问题
修复：小程序用户未登录时无法获取option信息，提示信息有误
修复：关闭验证码后，后台登录验证码输入框不显示的问题



jpress v4.0.8:
新增：插件新增 @Path() @GetMapping() @PostMapping() 的支持
新增：插件新增 @ActionKey() 注解配置相对路径配置的支持
优化：升级 JFinal 和 Jboot 到最新版本
优化：优化模板的后台设置页面
优化：修改带有错别字的方法名
优化：验证码输入框添加 autocomplete="off" 属性
修复：插件开发时，在某些情况下后台可能无法显示插件菜单的问题
修复：验证码在某些情况下出现异常的问题
文档：完善微信小程序用户登录、注册、获取手机号的相关 API 及其文档
文档：完善模板开发的相关文档
文档：完善微信的相关文档
文档：完善用户的相关文档
文档：完善设置的相关文档



jpress v4.0.7:
优化：一键安装脚本，方便阿里云和腾讯云等服务器进行一键安装
优化：升级 Jboot JFinal 到最新版本
优化：日志框架由 logback 切换到 log4j2，性能更高
修复：文章和产品搜索引擎切换到 es 的时候可能出错的问题
修复：setting_v4.html 不能使用的问题
修复：ElasticSearch 在 Mysql8 下更新文章会导致类型出错的问题
文档：完善系统配置的 Http API 相关文档和单元测试用例
文档：完善用户 Http API 相关的文档和单元测试用例
文档：完善文章相关 Http API 相关的文档和单元测试用例
文档：完善 API 签名算法的相关文档



jpress v4.0.6:
新增：模板编辑、文章编辑、页面编辑、产品编辑 的快捷键保存功能
新增：文章和产品搜索引擎的高亮显示...
新增：文章搜索引擎和产品搜索引擎切换后，自动重建搜索引擎的索引功能
优化：重构 product-provider 模块的包结构
修复：开启文章 Lucene 搜索引擎后，导致 elastic 包冲突的而造成 NoClassDefFoundError 的异常问题
修复：开启扁平化 URL 后，个别菜单可能无法正常高亮的问题



jpress v4.0.5:
优化：获取当前页面的分页页码的代码
修复：用户中心非管理员账户无法查看内容和投稿的问题
修复：calmlog 模板的页面评论会产生 2 此评论的问题
修复：文章页面的评论 pageNumber 获取错误的问题
修复：用户注册时可能出现返回 json 内容，而未跳转登录页面的问题



jpress v4.0.4:
新增：articles 路径的支持，用于渲染 "所有文章"
新增：products 路径的支持，用于渲染 "所有产品"
优化：增强文章、产品以及分类的固定连接支持 "-" 字符
优化：产品分类指令 productCategoryList 修改为 allProductCategories
优化：移除 AddonClassPath 的定义，Jboot 已经解决了动态加载的日志问题
优化：删除无用代码、重构 Service 的方法名称、移动 UrlUtils 的类到 utils 包下
优化：弹出的 layer 有小滚动条的问题
修复：后台商品编辑时无法显示最近标签的问题
修复：用户登录页面在某些情况下不跳转用户中心的问题
修复：用户中心下拉的购物车列表的产品无法点击的问题
修复：用户中心里，用户无法对产品评论进行删除的问题
修复：当开启扁平化 URL 后，文章详情、产品详情和页面的评论分页 URL 不正确的问题
修复：文章 tag 的 url 错误的问题



jpress v4.0.3:
修复：设置伪静态后缀后，重启失效的问题
修复：后台启用第三方登录后，默认登录页面 UI 错位的问题
修复：自定义后台登录地址时，后台无法登录的问题
修复：git 上还保存着大写的 AdminLTE.min.css 的问题
修复：JPress初始化时可能的一些安全问题
修复：某些页面出现 js 错误的问题
修复：docker-compose.yml 版本号错误的问题



jpress v4.0.2: