@@ -1,3 +1,11 @@
+jpress v4.1.0:
+优化：升级 Jboot、Jfinal 等到最新版本
+修复：文章输入多个标签的时候，存入数据库保存的标签错误的问题
+修复：文章、商品新建时，若保存两次会导致创建日期被清空的问题
+修复：页面二次编辑时，状态设置错误的问题
+
+
+
 jpress v4.0.9:
 新增：文章编辑新增上传视频的功能
 新增：新增 html2wxml 的 api 及其文档
